# FLIPKART-PRODUCT-RECOMMENDER-SYSTEM

./: .dockerignore  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  app.py  docker-compose.yml  flask-deployment.yaml  main.py  pyproject.toml  requirements.txt  setup.py
flipkart/: config.py  data_converter.py  data_ingestion.py  rag_chain.py
prometheus/: prometheus-configmap.yaml
utils/: custom_exception.py  logger.py
